# Battleship-Server

./: CMakeLists.txt  README.md
data/: usuarios_pruebas.txt
src/: cliente.cpp  cliente_automatico.cpp  cliente_medidor.cpp  estres_cliente.cpp  partida.cpp  partida.hpp  servidor.cpp  tablero.cpp  tablero.hpp  usuario.cpp  usuario.hpp
src/heuristica/: heuristica.cpp  heuristica.hpp  heuristicastr1.hpp  heuristicastr2.hpp
src/utils/: generador_usuarios_prueba.cpp  script_genera_clientes_auto.sh  script_genera_clientes_estres.sh  script_generador.sh
