cmake_minimum_required(VERSION 3.22)
project(P2)
set(PROJECT_AUTHOR "Pedro Rafael Velasco Priego")
set(PROJECT_EMAIL "i12veprp@uco.es")
set(PROJECT_VERSION "1.0")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
# Copia el archivo base_de_datos.txt a la carpeta de construcción
configure_file(${CMAKE_SOURCE_DIR}/data/basededatos.txt ${CMAKE_BINARY_DIR}/basededatos.txt COPYONLY)
add_executable(cliente.exe src/cliente.cpp src/usuario.cpp src/tablero.cpp src/partida.cpp)
add_executable(automatico_cliente.exe src/cliente_automatico.cpp src/usuario.cpp src/tablero.cpp src/partida.cpp src/cliente_automatico.cpp src/heuristica/heuristica.cpp)
add_executable(estres_cliente.exe src/estres_cliente.cpp)
add_executable(servidor.exe src/servidor.cpp src/usuario.cpp src/tablero.cpp src/partida.cpp)
message("Proyecto creado por: ${PROJECT_AUTHOR} (${PROJECT_EMAIL})")